# wsi-mil

./: .gitignore  README.md  pyproject.toml
configs/: aggregate_abmil.yaml  aggregate_mean_pooling.yaml  aggregate_titan.yaml  evaluate.yaml  preview.yaml  train.yaml  train_linear_probe.yaml
wsi_mil/: __init__.py  _cli.py
wsi_mil/commands/: __init__.py  aggregate.py  evaluate.py  preview.py  train.py
wsi_mil/models/: __init__.py  abmil.py  linear_probe.py  titan.py
wsi_mil/utils/: __init__.py  collate.py  datasets.py  fold_manager.py  metrics.py  umap.py
