[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wsi_mil"]

[tool.uv.sources]
wsi-toolbox = { git = "https://github.com/technoplasm/wsi-toolbox.git" }

[project]
name = "wsi_mil"
version = "1.0.0"
authors = [
  { name="ymd000", email="a.yamada18318@gmail.com" },
]
description = "WSI Multiple Instance Learning toolkit"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "einops-exts>=0.0.4",
    "lightning>=2.6.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4,<2",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.5.2",
    "torch>=2.8.0",
    "umap-learn>=0.5.7",
    "wsi-toolbox",
]

[project.urls]
Homepage = "https://github.com/ymd000/wsi-mil"
Issues = "https://github.com/ymd000/wsi-mil/issues"

[project.scripts]
mil = "wsi_mil._cli:main"
